# compute-sdk-cpp

./: -C  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Doxyfile  LICENSE  README.md  build-workaround.sh  build.rs  justfile
.github/workflows/: ci.yml  doxygen-gh-pages.yml  release.yml
docs/: body_8h_source.html  classfastly_1_1_body-members.html  classfastly_1_1_body.html  classfastly_1_1_body.js  classfastly_1_1http_1_1_body-members.html  classfastly_1_1http_1_1_body.html  classfastly_1_1http_1_1_body.js  doxygen_crawl.html  functions_b.html  functions_vars.html  navtreedata.js  navtreeindex0.js  navtreeindex1.js  navtreeindex2.js  navtreeindex3.js  navtreeindex4.js  request_8h_source.html  response_8h_source.html
docs/html/: functions_o.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js
docs/html/search/: searchdata.js
docs/search/: all_1.js  variables_1.js
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  async_reqs.cpp  basic.cpp  clock.cpp  device_detection.cpp  echo.cpp  esi.cpp  fastly.toml  random.cpp  robots.txt.cpp  router.cpp  rust-toolchain.toml  streaming_response.cpp
include/: util.cc  util.h
quickstart/: CMakeLists.txt  README.md  fastly.toml  main.cpp
src/: backend.rs  config_store.rs  device_detection.rs  lib.rs  secret_store.rs
src/cpp/: backend.cpp  backend.h  config_store.cpp  config_store.h  device_detection.cpp  device_detection.h  geo.cpp  geo.h  headers.cpp  headers.h  log.h  request.cpp  request.h  response.cpp  response.h  secret_store.cpp  secret_store.h  util.h
src/cpp/http/: backend.cpp  backend.h  body.cpp  body.h  header.cpp  header.h  method.h  purge.cpp  purge.h  request.cpp  request.h  response.cpp  response.h  status_code.cpp  status_code.h
src/http/: header.rs  mod.rs  purge.rs  request.rs  response.rs  status_code.rs
