cmake_minimum_required(VERSION 3.15)

# Set this wherever you have the `libfastly.a` + `fastly/*.h`
set(FASTLY_RELEASE_LOCATION ${CMAKE_CURRENT_SOURCE_DIR})

set(WASI_SDK_VERSION 25)
if(!WASI_SDK)
    if(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
        set(WASI_OS "macos")
    elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
        set(WASI_OS "windows")
    elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
        set(WASI_OS "linux")
    else()
        message(FATAL_ERROR "Unsupported wasi-sdk OS ${CMAKE_SYSTEM_NAME}.")
    endif()
    set(WASI_SDK ${CMAKE_CURRENT_SOURCE_DIR}/wasi-sdk-${WASI_SDK_VERSION}.0-${CMAKE_HOST_SYSTEM_PROCESSOR}-${WASI_OS})
    if(NOT EXISTS ${WASI_SDK})
        set(WASI_SDK "/opt/wasi-sdk")
    endif()
    if(NOT EXISTS ${WASI_SDK})
        message(FATAL_ERROR "No wasi-sdk ${WASI_SDK_VERSION}.0 found! Please set `WASI_SDK` to an appropriate path.")
    endif()
endif()
set(CMAKE_C_COMPILER "${WASI_SDK}/bin/clang")
set(CMAKE_CXX_COMPILER "${WASI_SDK}/bin/clang++")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-exceptions")

option(ENABLE_LTO "Enable cross language linking time optimization" ON)
if(ENABLE_LTO)
    include(CheckIPOSupported)
    check_ipo_supported(RESULT supported OUTPUT error)
    if(supported)
        message(STATUS "IPO / LTO enabled")
        set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
        add_link_options(-fuse-ld=lld)
    else()
        message(STATUS "IPO / LTO not supported: <${error}>")
    endif()
endif()

if (POLICY CMP0048)
    cmake_policy(SET CMP0048 NEW)
endif ()

project(quickstart)

set (CMAKE_CXX_STANDARD 17)

add_link_options(-L${WASI_SDK}/share/wasi-sysroot/lib/wasm32-wasi)

add_executable(main main.cpp)

if(MSVC)
    target_compile_options(main PRIVATE /W3 /WX)
else()
    target_compile_options(main PRIVATE -Wall -Wextra -Werror)
endif()

set_target_properties(main PROPERTIES SUFFIX .wasm)
target_include_directories(main PUBLIC ${FASTLY_RELEASE_LOCATION})
target_link_libraries(main PUBLIC ${FASTLY_RELEASE_LOCATION}/libfastly.a)
